--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "web",
+  "name": "homepage",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -7,13 +7,15 @@
     "dev": "next",
     "build": "next build",
     "start": "next start",
-    "build:content": "processmd \"projects/*.{yml,md}\" --outputDir output"
+    "build:content": "processmd \"content/**/*.{yaml,md}\" --outputDir output --summaryOutput output/summary.json",
+    "build:content:watch": "processmd \"content/**/*.{yml,md}\" --outputDir output --watch"
   },
   "author": "Ryo Suzuki <ryosuzk@googlemail.com> (http://ryosuzuki.org/)",
   "license": "ISC",
   "dependencies": {
     "@zeit/next-css": "^0.2.0",
     "next": "^6.1.1",
+    "next-routes": "^1.4.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-markdown": "^3.3.4"
