--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "@zeit/next-css": "^0.2.0",
+    "jquery": "^3.3.1",
     "next": "^6.1.1",
     "next-routes": "^1.4.2",
     "react": "^16.4.1",
