--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "next",
     "build": "next build",
     "start": "next start",
-    "deploy": "rm -rf node_modules/.cache && next build && next export && echo ryosuzuki.org > out/CNAME && touch out/.nojekyll && mv out/static/publications out/ && mv out/static/cv/cv.pdf out/ && git add out/ && git commit -m \"Deploy to gh-pages\" && git subtree push --prefix out origin gh-pages",
+    "deploy": "rm -rf node_modules/.cache && next build && next export && echo ryosuzuki.org > out/CNAME && touch out/.nojekyll && mv out/static/publications out/ && mv out/static/cv/cv.pdf out/ && git add out/",
+    "push" : "git subtree push --prefix out origin gh-pages",
     "build:content": "processmd \"content/**/*.{yaml,md}\" --outputDir output --summaryOutput output/summary.json",
     "build:content:watch": "processmd \"content/**/*.{yaml,md}\" --outputDir output --watch"
   },
