--- a/content/news.yaml
+++ b/content/news.yaml
@@ -1,3 +1,6 @@
+- date: '2019-03-26'
+  image: 'dis-2019.png'
+  text: One [**DIS 2019**](https://dis2019.com/) full-paper is accepted (25%).
 - date: '2018-08-06'
   image: 'uist-2018.png'
   text: One [**UIST 2018**](https://uist.acm.org/uist2018/) full-paper is accepted (21%).
