--- a/content/experience.yaml
+++ b/content/experience.yaml
@@ -1,3 +1,15 @@
+- period: May, 2019 --- Current
+  role: Intern
+  logo: adobe.png
+  institute:
+    name: Adobe Research
+    url: https://colorado.edu
+  lab:
+    name: Creative Intelligence Lab
+    url: http://hcc.colorado.edu/
+  advisors:
+    - name: Rubaiat Habib
+      url: https://rubaiathabib.me/
 - period: August, 2015 --- Current
   role: RA
   logo: cu-boulder.png
@@ -5,16 +17,16 @@
     name: CU Boulder
     url: https://colorado.edu
   lab:
-    name: HCC Group
-    url: http://hcc.colorado.edu/
+    name: THING Lab
+    url: https://www.colorado.edu/atlas/thing-lab
   advisors:
-    - name: Tom Yeh
-      url: http://tomyeh.info/
     - name: Daniel Lightinger
       url: http://leithinger.com/
     - name: Mark D. Gross
       url: http://mdgross.net/
-- period: December, 2017 --- Current
+    - name: Tom Yeh
+      url: http://tomyeh.info/
+- period: December, 2017 --- October, 2018
   role: Intern
   logo: ut.png
   institute:
