--- a/package.json
+++ b/package.json
@@ -7,22 +7,22 @@
     "dev": "next",
     "build": "next build",
     "start": "next start",
-    "deploy": "rm -rf node_modules/.cache && next build && next export && echo ryosuzuki.org > out/CNAME && touch out/.nojekyll && mv out/static/publications out/ && mv out/static/cv/cv.pdf out/ && git add out/",
-    "push": "git subtree push --prefix out origin gh-pages",
-    "force": "git push origin `git subtree split --prefix out master`:gh-pages --force",
-    "build:content": "processmd \"content/**/*.{yaml,md}\" --outputDir output --summaryOutput output/summary.json",
-    "build:content:watch": "processmd \"content/**/*.{yaml,md}\" --outputDir output --watch"
+    "deploy": "rm -rf node_modules/.cache && next build && next export && echo ryosuzuki.org > build/CNAME && touch build/.nojekyll && mv build/static/publications build/ && mv build/static/cv/cv.pdf build/ && git add build/",
+    "push": "git subtree push --prefix build origin gh-pages",
+    "force": "git push origin `git subtree split --prefix build master`:gh-pages --force",
+    "build:content": "processmd \"content/**/*.{yaml,md}\" --outputDir content/output --summaryOutput content/output/summary.json",
+    "build:content:watch": "processmd \"content/**/*.{yaml,md}\" --outputDir content/output --watch"
   },
   "author": "Ryo Suzuki <ryosuzk@googlemail.com> (http://ryosuzuki.org/)",
   "license": "ISC",
   "dependencies": {
-    "@zeit/next-css": "^0.2.0",
-    "jquery": "^3.3.1",
-    "next": "^6.1.1",
+    "@zeit/next-css": "^1.0.1",
+    "jquery": "^3.4.1",
+    "next": "^8.1.0",
     "next-routes": "^1.4.2",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
-    "react-markdown": "^3.3.4"
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-markdown": "^4.0.8"
   },
   "devDependencies": {
     "processmd": "^4.2.1"
