Fix twitter timeline

--- a/content/experience.yaml
+++ b/content/experience.yaml
@@ -55,7 +55,7 @@
     name: UC Berkeley
     url:
   lab:
-    name: Bid Lab
+    name: BiD Lab
     url: http://bid.berkeley.edu/
   advisors:
     - name: Bjoern Hartmann
