Add Morphio slide and shapebots video

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "push": "git subtree push --prefix out origin gh-pages",
     "force": "git push origin `git subtree split --prefix out master`:gh-pages --force",
     "build:content": "processmd \"content/**/*.{yaml,md}\" --outputDir content/output --summaryOutput content/output/summary.json",
-    "build:content:watch": "processmd \"content/**/*.{yaml,md}\" --outputDir content/output --watch  --markdownOptions.html true"
+    "watch": "processmd \"content/**/*.{yaml,md}\" --outputDir content/output --watch  --markdownOptions.html true"
   },
   "author": "Ryo Suzuki <ryosuzk@googlemail.com> (http://ryosuzuki.org/)",
   "license": "ISC",
