--- a/content/posters.yaml
+++ b/content/posters.yaml
@@ -1,6 +1,6 @@
 - author: Ryo Suzuki,
   title: 'Collective Shape-changing Interfaces'
-  pdf: uist-2019-dc.pdf
+  pdf: uist-2019-collective.pdf
   booktitle: Adjunct Proceedings of the 32nd Annual ACM Symposium on User Interface Software & Technology
   series: UIST '19 Doctoral Consortium
   year: 2019
