--- a/content/posters.yaml
+++ b/content/posters.yaml
@@ -12,7 +12,7 @@
   acmid: 3053187
   publisher: ACM
   address: New York, NY, USA
-  keywords: inflatables, shape-changing interfaces,large-scale interactions
+  keywords: shape-changing interfaces
 
 - author: Ryo Suzuki, Ryosuke Nakayama, Dan Liu, Yasuaki Kakehi, Mark D. Gross, and Daniel Leithinger,
   title: 'LiftTiles: Modular and Reconfigurable Room-scale Shape Displays through Retractable Inflatable Actuators'
