--- a/content/news.yaml
+++ b/content/news.yaml
@@ -1,9 +1,12 @@
+- date: '2019-08-02'
+  image: 'uist-2019.png'
+  text: One [**UIST 2019**](http://uist.acm.org/uist2019/) poster and and doctoral consortium paper are accepted.
+- date: '2019-07-01'
+  image: 'uist-2019.png'
+  text: One [**UIST 2019**](http://uist.acm.org/uist2019/) full-paper is accepted (24%).
 - date: '2019-06-27'
   image: 'uist-2019.png'
   text: Won [**Best Paper Award**](https://dis2019.com/overview/#track-4-shape-changing-interfaces) for [**DIS 2019**](https://dis2019.com/) (Top 1%).
-- date: '2019-06-21'
-  image: 'uist-2019.png'
-  text: One [**UIST 2019**](http://uist.acm.org/uist2019/) full-paper is accepted (23%).
 - date: '2019-05-20'
   image: 'uist-2019.png'
   text: Start intern at [**Adobe Research**](https://research.adobe.com/) in Seattle.
