--- a/content/news.yaml
+++ b/content/news.yaml
@@ -1,5 +1,7 @@
-- date: '2019-11-25---27'
-  text: Traveling to Boston to visit MIT and Harvard
+- date: '2019-12-12'
+  text: One [**CHI 2020**](https://chi2020.acm.org/) full-paper is accepted (24%).
+- date: '2019-11-25'
+  text: Traveling to Boston to visit MIT CSAIL and Media Lab
 - date: '2019-10-19'
   image: 'uist-2019.png'
   text: Traveling to New Orleans for [**UIST 2019**](http://uist.acm.org/uist2019/)
