--- a/content/experience.yaml
+++ b/content/experience.yaml
@@ -1,4 +1,4 @@
-- period: August, 2015 --- Current
+- period: August, 2015 --- May, 2020
   role: RA
   logo: cu-boulder.png
   institute:
@@ -14,6 +14,17 @@
       url: http://mdgross.net/
     - name: Tom Yeh
       url: http://tomyeh.info/
+- period: May, 2020 --- August, 2020
+  role: Intern
+  logo: microsoft.png
+  institute:
+    name: Microsoft Research
+    url: https://www.microsoft.com/en-us/research/
+  lab:
+    name: EPIC Group
+    url: https://www.microsoft.com/en-us/research/group/epic/
+  advisors:
+    - name: (to appear)
 - period: May, 2019 --- August, 2019
   role: Intern
   logo: adobe.png
@@ -22,7 +33,7 @@
     url: https://colorado.edu
   lab:
     name: Creative Intelligence Lab
-    url: http://hcc.colorado.edu/
+    url: https://research.adobe.com/
   advisors:
     - name: Rubaiat Habib
       url: https://rubaiathabib.me/
@@ -62,7 +73,7 @@
       url: http://people.eecs.berkeley.edu/~bjoern/
 - period: May, 2015 --- August, 2015
   role: Intern
-  logo: stanford.png
+  logo: stanford-2.png
   institute:
     name: Stanford University
     url: https://stanford.edu
