Fix minor issues

--- a/content/news.yaml
+++ b/content/news.yaml
@@ -17,7 +17,7 @@
   text: Traveling to New Orleans for [**UIST 2019**](http://uist.acm.org/uist2019/)
 - date: '2019-10-10'
   image: 'uist-2019.png'
-  text: 'Finished comprehensive exam and became a **PhD candidate** (committee: D Leithinger, M Gross, T Yeh, H Ishii, T Igarashi, E Do)'
+  text: 'Became a **PhD candidate** (committee: D Leithinger, M Gross, T Yeh, H Ishii, T Igarashi, E Do)'
 - date: '2019-10-08'
   image: 'uist-2019.png'
   text: One [**TEI 2020**](https://tei.acm.org/2020/) full-paper is accepted (28%).
@@ -65,7 +65,7 @@
   image: 'icse-2017.png'
   text: One [**ICSE 2017**](http://icse2017.gatech.edu/) full-paper is accepted
     (19%).
-- date: '2019-05-23'
+- date: '2016-05-23'
   text: Start intern at [**UC Berkeley**](http://bid.berkeley.edu/).
 - date: '2016-01-15'
   image: 'chi-2016.png'
@@ -74,7 +74,7 @@
 - date: '2015-10-01'
   image: 'uist-2016.jpg'
   text: I will serve as a web and social media chair for [**UIST 2016**](http://uist.acm.org/uist2016/)
-- date: '2019-05-18'
+- date: '2015-05-18'
   text: Start intern at [**Stanford**](https://hci.stanford.edu/).
 - date: '2014-10-15'
-  text: The first day to start HCI research (previously economics/game theory)
+  text: The very first day of starting my HCI research
