--- a/content/experience.yaml
+++ b/content/experience.yaml
@@ -59,7 +59,7 @@
     url: http://www.jst.go.jp/erato/kawahara
   advisors:
     - name: Yasuaki Kakehi
-      url: http://www.xlab.sfc.keio.ac.jp/
+      url: http://xlab.iii.u-tokyo.ac.jp/
     - name: Yoshihiro Kawahara
       url: http://www.akg.t.u-tokyo.ac.jp/
     - name: Ryuma Niiyama
