--- a/content/experience.yaml
+++ b/content/experience.yaml
@@ -1,3 +1,15 @@
+- period: August, 2020 --- Current
+  role: Assistant Professor
+  logo: ucalgary.png
+  institute:
+    name: University of Calgary
+    url: https://www.ucalgary.ca/
+  lab:
+    name: HCI Group
+    url: https://ilab.cpsc.ucalgary.ca/
+  advisors:
+    - name: Assistant Professor
+      url: https://science.ucalgary.ca/computer-science
 - period: August, 2015 --- August, 2020
   role: RA
   logo: cu-boulder.png
@@ -28,6 +40,8 @@
       url: https://www.microsoft.com/en-us/research/people/margon/
     - name: Eyal Ofek
       url: https://www.microsoft.com/en-us/research/people/eyalofek/
+    - name: Mike Sinclair
+      url: https://www.microsoft.com/en-us/research/people/sinclair/
     - name: Ken Hinckley
       url: https://www.microsoft.com/en-us/research/people/kenh/
 - period: May, 2019 --- August, 2019
