--- a/content/news.yaml
+++ b/content/news.yaml
@@ -1,5 +1,7 @@
+- date: '2020-08-07'
+  text: 'Joining the [**University of Calgary**](https://www.ucalgary.ca/) as an Assisatnat Professor in CS and [**HCI Group**](https://ilab.cpsc.ucalgary.ca/) starting in Fall 2020.'
 - date: '2020-07-28'
-  text: '[**PhD Dissertation**](https://ryosuzuki.org/publications/phd-dissertation.pdf) is submitted and officially graduated.'
+  text: '[**PhD Dissertation**](https://ryosuzuki.org/publications/phd-dissertation.pdf) is submitted and officially graduated! :)'
 - date: '2020-07-01'
   text: One [**IROS 2020**](https://www.iros2020.org/) full-paper is accepted (47%).
 - date: '2020-06-24'
