--- a/content/news.yaml
+++ b/content/news.yaml
@@ -1,3 +1,5 @@
+- date: '2020-08-28'
+  text: 'Our [**UIST paper**](https://ryosuzuki.org/realitysketch/) won 🏆 **Honorable Mention Awarad**.'
 - date: '2020-08-07'
   text: 'Joining the [**University of Calgary**](https://www.ucalgary.ca/) as an Assisatnat Professor in CS and [**HCI Group**](https://ilab.cpsc.ucalgary.ca/) starting in Fall 2020.'
 - date: '2020-07-28'
