--- a/content/experience.yaml
+++ b/content/experience.yaml
@@ -11,7 +11,7 @@
     - name: Computer Science
       url: https://science.ucalgary.ca/computer-science
 - period: August, 2015 --- August, 2020
-  role: Research Assistnat
+  role: Research Assistant
   logo: cu-boulder.png
   institute:
     name: CU Boulder
