--- a/content/news.yaml
+++ b/content/news.yaml
@@ -1,7 +1,15 @@
+- date: '2021-08-28'
+  text: 'Our [**UIST 2021**](https://ryosuzuki.org/hapticbots/) full-paper is accepted (25%).'
+- date: '2021-06-16'
+  text: 'We won [**Snap Creative Challenge Award**](https://www.snapcreativechallenge.com/)'
+- date: '2021-05-16'
+  text: 'Started supervising **6 MSc/PhD students** (including co-supervision) and **5 undergrad research students** (+ more in the future)'
+- date: '2021-04-16'
+  text: 'Received [**NSERC Discovery Grant**](https://www.nserc-crsng.gc.ca/professors-professeurs/grants-subs/dgigp-psigp_eng.asp) Funding'
 - date: '2020-08-28'
   text: 'Our [**UIST paper**](https://ryosuzuki.org/realitysketch/) won 🏆 **Honorable Mention Awarad**.'
 - date: '2020-08-07'
-  text: 'Joining the [**University of Calgary**](https://www.ucalgary.ca/) as an Assisatnat Professor in CS and [**HCI Group**](https://ilab.cpsc.ucalgary.ca/) starting in Fall 2020.'
+  text: 'Joining the [**University of Calgary**](https://www.ucalgary.ca/) as an Assisatnat Professor in CS and [**HCI Group**](https://ilab.cpsc.ucalgary.ca/) starting in Winter 2021.'
 - date: '2020-07-28'
   text: '[**PhD Dissertation**](https://ryosuzuki.org/publications/phd-dissertation.pdf) is submitted and officially graduated! :)'
 - date: '2020-07-01'
