--- a/content/posters.yaml
+++ b/content/posters.yaml
@@ -1,3 +1,19 @@
+- author: Ryo Suzuki, Rubaiat Habib, Li-Yi Wei, Stephen Diverdi, Wilmot Li, Daniel Leithinger
+  title: 'Real- itySketch: Augmented Reality Sketching for Real-time Embedded and Responsive Visualiza- tions'
+  booktitle: Adjunct Proceedings of the 34th Annual ACM Symposium on User Interface Software & Technology
+  series: SIGGRAPH Asia '21 Real-time Live!
+  year: 2021
+  location: Tokyo, Japan
+  numpages: 1
+  doi: xxx/xxx
+- author: Samin Farajian, Hiroki Kaimoto, Ryo Suzuki
+  title: 'Swarm Fabrication: Reconfigurable 3D Printers and Drawing Plotters Made of Swarm Robots'
+  booktitle: Adjunct Proceedings of the 34th Annual ACM Symposium on User Interface Software & Technology
+  series: UIST '21 SIC
+  year: 2021
+  location: New Orleans, Louisiana, USA
+  numpages: 2
+  doi: xxx/xxx
 - author: Martin Nisser, Leon Cheng, Yashaswini Makaram, Ryo Suzuki, Stefanie Mueller
   title: 'Programmable Polarities: Actuating Interactive Prototypes withProgrammable Electromagnets'
   pdf: uist-2021-programmable.pdf
@@ -13,7 +29,6 @@
   publisher: ACM
   address: New York, NY, USA
   keywords: modular self-reconfigurable robots
-
 - author: Ryo Suzuki,
   title: 'Collective Shape-changing Interfaces'
   pdf: uist-2019-collective.pdf
