--- a/content/news.yaml
+++ b/content/news.yaml
@@ -1,17 +1,37 @@
+- date: '2022-07-05'
+  text: 'Invited Talk at [**KAIST**]((https://hci.kaist.ac.kr/)) (hosted by Andrea Bianchi and Juho Kim).'
+- date: '2022-07-04'
+  text: 'Visit [**KAIST HCI Group**](https://hci.kaist.ac.kr/) in Korea.'
+- date: '2022-06-30'
+  text: 'One [**IROS 2022**](https://iros2022.org/) full-paper is accepted (48%).'
+- date: '2022-06-25'
+  text: 'Three [**UIST 2022**](https://uist.acm.org/uist2022/) full-paper are accepted (26%).'
+- date: '2022-06-23'
+  text: '[**UIST 2022 PC Meeting**](https://uist.acm.org/uist2022/organizers.html).'
+- date: '2022-06-16'
+  text: 'Visit [**SFU HC Group**](https://ixlab.cs.sfu.ca/) in Vancouver.'
+- date: '2022-05-16'
+  text: 'Invited Talk at [**Calgary Public Library**](https://calgarylibrary.ca/).'
+- date: '2022-05-01'
+  text: 'Presented [**AR and Robotics Taxonomy**](https://ilab.ucalgary.ca/ar-and-robotics/) paper at [**CHI 2022**](https://chi2022.acm.org/) in New Orleans.'
+- date: '2022-04-28'
+  text: 'Invited Talk at [**Microsoft Research EPIC Group**](https://www.microsoft.com/en-us/research/group/epic/) in Redmond (hosted by Ken Hinckley).'
+- date: '2022-03-11'
+  text: 'Invited Talk at [**CU Boulder ATLAS**](https://www.colorado.edu/atlas/) (hosted by Ellen Yi-Luen Do and Mark Gross).'
 - date: '2022-02-11'
-  text: 'Our [**CHI 2022**](https://ilab.ucalgary.ca/ar-and-robotics/) full-paper is accepted (26%).'
+  text: 'One [**CHI 2022**](https://ilab.ucalgary.ca/ar-and-robotics/) full-paper is accepted (26%).'
 - date: '2022-01-21'
-  text: 'Our [**ICRA 2022**](https://hcie.csail.mit.edu/research/Electrovoxel/electrovoxel.html) full-paper is accepted.'
+  text: 'One [**ICRA 2022**](https://hcie.csail.mit.edu/research/Electrovoxel/electrovoxel.html) full-paper is accepted.'
 - date: '2021-12-17'
   text: 'Presented **RealitySketch** at [**SIGGRAPH Asia 2021 Real-time Live!**](https://sa2021.siggraph.org/en/attend/real-time-live/6/sessions) in front of thousands of audience.'
 - date: '2021-11-11'
   text: '[**CHI 2022 PC Meeting**](https://chi2022.acm.org/for-authors/presenting/papers/selecting-a-subcommittee/#blending_interaction) (Blending Interaction).'
-- date: '2021-06-23'
-  text: 'Samin Farajian won **UIST 2021** [**Best Student Innovation Contest Award**](https://www.youtube.com/watch?v=R98vR3tukMY)'
+- date: '2021-10-14'
+  text: 'Samin Farajian won [**UIST 2021**](https://uist.acm.org/uist2021/) [**Best Student Innovation Contest Award**](https://www.youtube.com/watch?v=R98vR3tukMY)'
 - date: '2021-09-30'
   text: '[**TEI 2022 PC Meeting**](https://tei.acm.org/2022/participate/papers/).'
 - date: '2021-09-01'
-  text: 'Started supervising [**6 MSc students**](https://programmable-reality-lab.github.io/) (including co-supervision) and **5 undergrad research students** (+ more in the future)'
+  text: 'Started [**Programmable Reality Lab**](https://programmable-reality-lab.github.io/).'
 - date: '2021-08-28'
   text: '[**VRST 2021 PC Meeting**](https://vrst.acm.org/vrst2021/organizers/).'
 - date: '2021-08-28'
