--- a/content/news.yaml
+++ b/content/news.yaml
@@ -1,3 +1,15 @@
+- date: '2023-01-19'
+  text: 'Five Late-Breaking Work papers were submitted to [**CHI 2023 LBW**](https://chi2023.acm.org/)'
+- date: '2023-01-13'
+  text: 'Two [**CHI 2023**](https://chi2023.acm.org/) full-papers are accepted (28%)'
+- date: '2023-01-11'
+  text: '[**CHI 2023 PC Meeting**](https://chi2023.acm.org/subcommittees/selecting-a-subcommittee/#blending_interaction) (Blending Interaction Subcommittee).'
+- date: '2022-12-13'
+  text: 'Three papers were submitted to R&R for [**CHI 2023**](https://chi2023.acm.org/)'
+- date: '2022-12-01'
+  text: 'Visit [**ATLAS Institute**](https://www.colorado.edu/atlas/) at [**CU Boulder**](https://www.colorado.edu/)'
+- date: '2022-11-02'
+  text: 'Mehrad Faridan and Marcus Friedel won Honorable Mention Award for [**UIST 2022**](https://uist.acm.org/uist2022/) Student Innovation Contest'
 - date: '2022-10-30'
   text: 'Attend [**UIST 2022**](https://uist.acm.org/uist2022/) in Bend'
 - date: '2022-10-25'
@@ -5,15 +17,15 @@
 - date: '2022-10-23'
   text: 'Visit [**Kyoto University**](https://www.kyoto-u.ac.jp/en)'
 - date: '2022-10-15'
-  text: 'Visit [**Tohoku University**](https://www.riec.tohoku.ac.jp/~kitamura/) (to see Yoshifumi Kitamura).'
+  text: 'Visit [**Tohoku University**](https://www.riec.tohoku.ac.jp/~kitamura/) (Yoshifumi Kitamura Lab).'
 - date: '2022-10-15'
   text: 'Traveling to Japan.'
 - date: '2022-09-30'
-  text: '[**TEI 2022 PC Work**](https://tei.acm.org/2023/participate/paper/).'
+  text: '[**TEI 2022 PC Meeting**](https://tei.acm.org/2023/participate/paper/).'
 - date: '2022-09-01'
-  text: '[**VRST 2022 PC Work**](https://vrst.acm.org/vrst2022/organizers/).'
+  text: '[**VRST 2022 PC Meeting**](https://vrst.acm.org/vrst2022/organizers/).'
 - date: '2022-08-05'
-  text: '[**ISMAR 2022 PC Work**](https://ismar2022.org/ismar-st-program-committee/).'
+  text: '[**ISMAR 2022 PC Meeting**](https://ismar2022.org/ismar-st-program-committee/).'
 - date: '2022-07-31'
   text: 'Final Day for the Mitacs Globalink Summer Intern Students.'
 - date: '2022-07-29'
