--- a/content/news.yaml
+++ b/content/news.yaml
@@ -1,5 +1,7 @@
-- date: '2023-01-19'
-  text: 'Five Late-Breaking Work papers were submitted to [**CHI 2023 LBW**](https://chi2023.acm.org/)'
+- date: '2023-04-23'
+  text: 'Attend [**CHI 2023 LBW**](https://chi2023.acm.org/) in Hamburg to present two full-papers and two late-breaking work'
+- date: '2023-02-26'
+  text: 'Two [**CHI 2023 LBW**](https://chi2023.acm.org/) papers were accepted (34%)'
 - date: '2023-01-13'
   text: 'Two [**CHI 2023**](https://chi2023.acm.org/) full-papers are accepted (28%)'
 - date: '2023-01-11'
