--- a/content/posters.yaml
+++ b/content/posters.yaml
@@ -1,17 +1,40 @@
+- author: Neil Chulpongsatorn, Wesley Willett, Ryo Suzuki
+  id: holotouch
+  name: HoloTouch
+  title: 'HoloTouch: Interacting with Mixed Reality Visualizations Through Smartphone Proxies'
+  pdf: chi-2023-holotouch.pdf
+  series: CHI '23 LBW
+  doi: 10.1145/3544549.3585738
+  year: 2023
+
+- author: Cathy Mengying Fang, Ryo Suzuki, Daniel Leithinger
+  id: haptics-at-home
+  name: VR Haptics at Home
+  title: 'VR Haptics at Home: Repurposing Everyday Objects and Environment for Casual and On-Demand VR Haptic Experiences'
+  pdf: chi-2023-haptics-at-home.pdf
+  series: CHI '23 LBW
+  doi: 10.1145/3544549.3585871
+  year: 2023
+
 - author: Mehrad Faridan, Marcus Friedel, Ryo Suzuki
+  id: ultrabots
+  name: UltraBots
   title: 'UltraBots: Large-Area Mid-Air Haptics for VR with Robotically Actuated Ultrasound Transducers'
   pdf: uist-2022-ultrabots.pdf
   booktitle: Adjunct Proceedings of the 35th Annual ACM Symposium on User Interface Software & Technology
   series: UIST '22 SIC
   year: 2022
+  video: https://www.youtube.com/watch?v=jMYAQzzQ_PI
   location: Bend, Oregon
   numpages: 3
-  doi: xxx/xxx
+  doi: 10.1145/3526114.3561350
   publisher: ACM
   address: New York, NY, USA
   pages: 1--3
 
 - author: Marcus Friedel, Ehud Sharlin, Ryo Suzuki
+  id: haptic-lever
+  name: HapticLever
   title: 'HapticLever: Kinematic Force Feedback using a 3D Pantograph'
   pdf: uist-2022-hapticlever.pdf
   booktitle: Adjunct Proceedings of the 35th Annual ACM Symposium on User Interface Software & Technology
@@ -25,10 +48,12 @@
   pages: 1--3
 
 - author: Ryo Suzuki, Rubaiat Habib, Li-Yi Wei, Stephen Diverdi, Wilmot Li, Daniel Leithinger
+  id: reality-sketch
+  name: RealitySketch
   title: 'RealitySketch: Augmented Reality Sketching for Real-time Embedded and Responsive Visualiza- tions'
   pdf: siggraph-asia-2021-realitysketch.pdf
   booktitle: Adjunct Proceedings of the 34th Annual ACM Symposium on User Interface Software & Technology
-  series: SIGGRAPH Asia '21 Real-time Live!
+  series: SIGGRAPH Asia '21 RTL
   year: 2021
   location: Tokyo, Japan
   numpages: 1
@@ -38,6 +63,8 @@
   pages: 1--1
 
 - author: Samin Farajian, Hiroki Kaimoto, Ryo Suzuki
+  id: swarm-fabrication
+  name: Swarm Fabrication
   title: 'Swarm Fabrication: Reconfigurable 3D Printers and Drawing Plotters Made of Swarm Robots'
   pdf: uist-2021-swarm-fabrication.pdf
   booktitle: Adjunct Proceedings of the 34th Annual ACM Symposium on User Interface Software & Technology
@@ -51,6 +78,8 @@
   pages: 1--2
 
 - author: Martin Nisser, Leon Cheng, Yashaswini Makaram, Ryo Suzuki, Stefanie Mueller
+  id: programmable-polarities
+  name: Programmable Polarities
   title: 'Programmable Polarities: Actuating Interactive Prototypes withProgrammable Electromagnets'
   pdf: uist-2021-programmable.pdf
   booktitle: Adjunct Proceedings of the 34th Annual ACM Symposium on User Interface Software & Technology
@@ -67,10 +96,12 @@
   keywords: modular self-reconfigurable robots
 
 - author: Ryo Suzuki,
+  id: collective
+  name: Collective Shape-Changing UI
   title: 'Collective Shape-changing Interfaces'
   pdf: uist-2019-collective.pdf
   booktitle: Adjunct Proceedings of the 32nd Annual ACM Symposium on User Interface Software & Technology
-  series: UIST '19 Doctoral Consortium
+  series: UIST '19 DC
   year: 2019
   isbn: 978-1-4503-4656-6
   location: New Orleans, Louisiana, USA
@@ -83,11 +114,13 @@
   keywords: shape-changing interfaces
 
 - author: Ryo Suzuki, Ryosuke Nakayama, Dan Liu, Yasuaki Kakehi, Mark D. Gross, and Daniel Leithinger,
+  id: lift-tiles
+  name: LiftTiles
   title: 'LiftTiles: Modular and Reconfigurable Room-scale Shape Displays through Retractable Inflatable Actuators'
   pdf: uist-2019-lift-tiles.pdf
   poster: uist-2019-lift-tiles-poster.pdf
   booktitle: Adjunct Proceedings of the 32nd Annual ACM Symposium on User Interface Software & Technology
-  series: UIST '19 Adjunct
+  series: UIST '19 Poster
   year: 2019
   isbn: 978-1-4503-4656-6
   location: New Orleans, Louisiana, USA
@@ -100,11 +133,13 @@
   keywords: inflatables, shape-changing interfaces,large-scale interactions
 
 - author: Ryo Suzuki, Gustavo Soares, Elena Glassman, Andrew Head, Loris D'Antoni, and Bjoern Hartmann,
+  id: synthesized-hints
+  name: Synthesized Hints
   title: 'Exploring the Design Space of Automatically Synthesized Hints for Introductory Programming Assignments'
   pdf: chi-2017-lbw.pdf
   poster: chi-2017-lbw-poster.pdf
   booktitle: Proceedings of the 2017 CHI Conference Extended Abstracts on Human Factors in Computing Systems
-  series: CHI EA '17
+  series: CHI '17 LBW
   year: 2017
   isbn: 978-1-4503-4656-6
   location: Denver, Colorado, USA
@@ -118,10 +153,12 @@
   keywords: automated feedback, program synthesis, programming education
 
 - author: Stanford Crowd Research Collective
+  id: daemo
+  name: Daemo
   title: 'Daemo: A Self-Governed Crowdsourcing Marketplace'
   pdf: uist-2015-daemo.pdf
   booktitle: Adjunct Proceedings of the 28th Annual ACM Symposium on User Interface Software & Technology
-  series: UIST '15 Adjunct
+  series: UIST '15 Poster
   year: 2015
   isbn: 978-1-4503-3780-9
   location: Daegu, Kyungpook, Republic of Korea
@@ -134,18 +171,22 @@
   address: New York, NY, USA
   keywords: crowd research, crowd work., crowdsourcing
 
-- author: Ryo Suzuki,
-  title: 'Toward a Community Enhanced Programming Education'
-  pdf: chi-2015-workshop.pdf
-  slide: chi-2015-workshop-slide.pdf
-  booktitle: ACM CHI 2015 Symposium on Emerging Japanese HCI Research Collection
-  series: CHI '15 Workshop
-  year: 2015
-  location: Seoul, Korea
-  publisher: ACM
-  address: New York, NY, USA
+# - author: Ryo Suzuki
+#   id: cumiki
+#   name: Cumiki
+#   title: 'Toward a Community Enhanced Programming Education'
+#   pdf: chi-2015-workshop.pdf
+#   slide: chi-2015-workshop-slide.pdf
+#   booktitle: ACM CHI 2015 Symposium on Emerging Japanese HCI Research Collection
+#   series: CHI '15 Workshop
+#   year: 2015
+#   location: Seoul, Korea
+#   publisher: ACM
+#   address: New York, NY, USA
 
-- author: Ryo Suzuki,
+- author: Ryo Suzuki
+  id: cumiki
+  name: Cumiki
   title: 'Interactive and Collaborative Source Code Annotation'
   pdf: icse-2015-cumiki.pdf
   poster: icse-2015-cumiki-poster.pdf
@@ -161,15 +202,17 @@
   address: Piscataway, NJ, USA
 
 
-- author: Ryo Suzuki,
-  title: 'Network Thresholds and Multiple Equilibria in the Diffusion of Content-Based Platforms'
-  pdf: wine-2014-network.pdf
-  poster: wine-2014-network-poster.pdf
-  booktitle: International Conference on Web and Internet Economics
-  series: WINE '14 Poster
-  year: 2014
-  location: Beijing, China
-  publisher: Springer
-  address: New York, NY, USA
+# - author: Ryo Suzuki,
+#   id: populi
+#   name: Populi
+#   title: 'Network Thresholds and Multiple Equilibria in the Diffusion of Content-Based Platforms'
+#   pdf: wine-2014-network.pdf
+#   poster: wine-2014-network-poster.pdf
+#   booktitle: International Conference on Web and Internet Economics
+#   series: WINE '14 Poster
+#   year: 2014
+#   location: Beijing, China
+#   publisher: Springer
+#   address: New York, NY, USA
 
 # - author: S. Gaikwad, D. Morina, R. Nistala, M. Agarwal, A. Cossette, R. Bhanu, S. Savage, V. Narwal, K. Rajpal, J. Regino, A. Mithal, A. Ginzberg, A. Nath, K. R. Ziulkoski, T. Cossette, D. Gamage, A. Richmond-Fuller, R. Suzuki, J. Herrejon, K. V. Le, C. Flores-Saviaga, H. Thilakarathne, K. Gupta, W. Dai, A. Sastry, S. Goyal, T. Rajapakshe, N. Abolhassani, A. Xie, A. Reyes, S. Ingle, V. Jaramillo, M.D. Godinez, W. Angel, M. Godinez, C. Toxtli, J. Flores, A. Gupta, V. Sethia, D. Padilla, K. Milland, K. Setyadi, N. Wajirasena, M. Batagoda, R. Cruz, J. Damon, D. Nekkanti, T. Sarma, M.H. Saleh, G. Gongora-Svartzman, S. Bateni, G. Toledo-Barrera, A. Pena, R. Compton, D. Aariff, L. Palacios, M. P. Ritter, Nisha K.K., A. Kay, J. Uhrmeister, S. Nistala, M. Esfahani, E. Bakiu, C. Diemert, L. Matsumoto, M. Singh, V. Jaramillo-Lopez, K. Patel, R. Krishna, G. Kovacs, R. Vaish, M. Bernstein
