--- a/content/posters.yaml
+++ b/content/posters.yaml
@@ -42,7 +42,7 @@
   year: 2022
   location: Bend, Oregon
   numpages: 3
-  doi: xxx/xxx
+  doi: 10.1145/3526114.3558736
   publisher: ACM
   address: New York, NY, USA
   pages: 1--3
@@ -70,9 +70,9 @@
   booktitle: Adjunct Proceedings of the 34th Annual ACM Symposium on User Interface Software & Technology
   series: UIST '21 SIC
   year: 2021
+  video: https://www.youtube.com/watch?v=R98vR3tukMY
   location: New Orleans, Louisiana, USA
   numpages: 2
-  doi: xxx/xxx
   publisher: ACM
   address: New York, NY, USA
   pages: 1--2
@@ -85,11 +85,12 @@
   booktitle: Adjunct Proceedings of the 34th Annual ACM Symposium on User Interface Software & Technology
   series: UIST '21 Demo
   year: 2021
+  video: https://www.youtube.com/watch?v=8F-MEuwspIM
   isbn: 978-1-4503-4656-6
   location: New Orleans, Louisiana, USA
   pages: 2951--2958
   numpages: 2
-  doi: xxx/xxx
+  doi: 10.1145/3474349.3480198
   acmid: 3053187
   publisher: ACM
   address: New York, NY, USA
@@ -107,7 +108,7 @@
   location: New Orleans, Louisiana, USA
   pages: 2951--2958
   numpages: 2
-  doi: xxx/xxx
+  doi: 10.1145/3332167.3356877
   acmid: 3053187
   publisher: ACM
   address: New York, NY, USA
@@ -122,11 +123,12 @@
   booktitle: Adjunct Proceedings of the 32nd Annual ACM Symposium on User Interface Software & Technology
   series: UIST '19 Poster
   year: 2019
+  video: https://www.youtube.com/watch?v=SYCmftQCilU
   isbn: 978-1-4503-4656-6
   location: New Orleans, Louisiana, USA
   pages: 2951--2958
   numpages: 2
-  doi: xxx/xxx
+  doi: 10.1145/3332167.3357105
   acmid: 3053187
   publisher: ACM
   address: New York, NY, USA
@@ -145,7 +147,6 @@
   location: Denver, Colorado, USA
   pages: 2951--2958
   numpages: 8
-  url: http://doi.acm.org/10.1145/3027063.3053187
   doi: 10.1145/3027063.3053187
   acmid: 3053187
   publisher: ACM
@@ -164,7 +165,6 @@
   location: Daegu, Kyungpook, Republic of Korea
   pages: 101--102
   numpages: 2
-  url: http://doi.acm.org/10.1145/2815585.2815739
   doi: 10.1145/2815585.2815739
   acmid: 2815739
   publisher: ACM
@@ -193,10 +193,12 @@
   booktitle: Proceedings of the 37th International Conference on Software Engineering - Volume 2
   series: ICSE '15 Poster
   year: 2015
+  video: https://www.youtube.com/watch?v=0-CzQhxMRkc
   location: Florence, Italy
   pages: 799--800
   numpages: 2
   url: http://dl.acm.org/citation.cfm?id=2819009.2819173
+  doi: 10.5555/2819009.2819173
   acmid: 2819173
   publisher: IEEE Press
   address: Piscataway, NJ, USA
