Add UIST and DIS

--- a/content/experience.yaml
+++ b/content/experience.yaml
@@ -10,6 +10,15 @@
   advisors:
     - name: Computer Science
       url: https://science.ucalgary.ca/computer-science
+- period: July, 2023 --- Current
+  role: Visiting Researcher
+  logo: google.png
+  institute:
+    name: Google
+    url: https://arvr.google.com/
+  lab:
+    name: BIRD Lab
+    url: https://margonzalezfranco.github.io/
 - period: August, 2015 --- August, 2020
   role: Research Assistant
   logo: cu-boulder.png
@@ -20,7 +29,7 @@
     name: THING Lab
     url: https://www.colorado.edu/atlas/thing-lab
   advisors:
-    - name: Daniel Lightinger
+    - name: Daniel Leithinger
       url: http://leithinger.com/
     - name: Mark D. Gross
       url: http://mdgross.net/
