--- a/content/news.yaml
+++ b/content/news.yaml
@@ -1,5 +1,15 @@
+- date: '2023-07-25'
+  text: 'Three [**UIST 2023**](https://uist.acm.org/2023) full-papers are accepted (25%)'
+- date: '2023-06-22'
+  text: '[**UIST 2023 PC Meeting**](https://uist.acm.org/2023/organizers/) Subcommittee Chair'
+- date: '2023-05-25'
+  text: 'One [**DIS 2023**](https://dis.acm.org/2023/) full-paper is accepted'
+- date: '2023-05-25'
+  text: 'One [**DIS 2023**](https://dis.acm.org/2023/) full-paper is accepted'
+- date: '2023-05-10'
+  text: 'Visit Rome, Barcelona, and London for Guest Talk'
 - date: '2023-04-23'
-  text: 'Attend [**CHI 2023 LBW**](https://chi2023.acm.org/) in Hamburg to present two full-papers and two late-breaking work'
+  text: 'Attend [**CHI 2023**](https://chi2023.acm.org/) in Hamburg to present two full-papers and two late-breaking work'
 - date: '2023-02-26'
   text: 'Two [**CHI 2023 LBW**](https://chi2023.acm.org/) papers were accepted (34%)'
 - date: '2023-01-13'
