--- a/content/students.yaml
+++ b/content/students.yaml
@@ -68,11 +68,11 @@
   past: 'intern'
   now: 'Aarhus'
 
-- id: 'shrivatsa-mishra'
-  name: 'Shrivatsa Mishra'
-  type: 'alumni'
-  past: 'intern'
-  now: 'CU Boulder'
+# - id: 'shrivatsa-mishra'
+#   name: 'Shrivatsa Mishra'
+#   type: 'alumni'
+#   past: 'intern'
+#   now: 'CU Boulder'
 
 - id: 'hiroki-kaimoto'
   name: 'Hiroki Kaimoto'
