--- a/content/experience.yaml
+++ b/content/experience.yaml
@@ -19,6 +19,15 @@
   lab:
     name: BIRD Lab
     url: https://margonzalezfranco.github.io/
+- period: October, 2023 --- Current
+  role: Visiting Professor
+  logo: tohoku.png
+  institute:
+    name: Tohoku University
+    url: https://arvr.google.com/
+  lab:
+    name: Cyber & Real Center
+    url: https://www.cr-ict.riec.tohoku.ac.jp/
 - period: August, 2015 --- August, 2020
   role: Research Assistant
   logo: cu-boulder.png
