--- a/content/experience.yaml
+++ b/content/experience.yaml
@@ -9,7 +9,7 @@
     url: https://www.colorado.edu/atlas/
   advisors:
     - name: Programmable Reality Lab
-      url: http://leithinger.com/
+      url: https://www.colorado.edu/atlas/programmable-reality-lab
 - period: January, 2021 --- August, 2024
   role: Assistant Professor
   logo: ucalgary.png
